Use "acceptance" instead of "functional" (per xUnit Test Patterns book).

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
             <h4>Write tests at these levels:</h4>
             <small>
               <ul>
-                <li><strong>Functional</strong> &mdash; components are wired together correctly.</li>
+                <li><strong>Acceptance</strong> &mdash; components are wired together correctly.</li>
                 <li><strong>Unit</strong> &mdash; components work correctly, and are easy to use.</li>
                 <li><strong>Integration</strong> &mdash; this system works correctly with other systems.</li>
               </ul>
@@ -365,7 +365,7 @@
           </section>
 
           <section>
-            <h4>Write a failing functional test first.</h4>
+            <h4>Write a failing acceptance test first.</h4>
             <p>
               <small>
                 Clearly express desired <strong>system</strong> behavior.
@@ -426,7 +426,7 @@
               <small>
                 Build more {unit, integration} tests until the code
                 <br />
-                is correct, and the functional test passes.
+                is correct, and the acceptance test passes.
               </small>
             </p>
           </section>
