Update TDD presentation.

--- a/index.html
+++ b/index.html
@@ -409,15 +409,24 @@
                 <span class="important">Important, but often skipped!</span>
                 <br />
                 <br />
-                Qualities of clean code:
-                <br />
-                Minimal duplication, clarity, simplicity, loose coupling,
-                <br />
-                high cohesion, easy composition, context independence,
-                <br />
-                minimal &ldquo;code smells,&rdquo; etc.
+                All of software engineering is in scope, but &hellip;
               </small>
             </p>
+          </section>
+
+          <section>
+            <h4>Refactoring: a good start.</h4>
+            <small>
+              <ul>
+                <li>Good names.</li>
+                <li>Short methods.</li>
+                <li>Only a few methods per class.</li>
+                <br />
+                <li>Do one thing.</li>
+                <li>Don't repeat yourself (DRY).</li>
+                <li>Uniform levels of abstraction.</li>
+              </ul>
+            </small>
           </section>
 
           <section>
