--- a/index.html
+++ b/index.html
@@ -54,29 +54,31 @@
           </section>
 
           <section>
-            <h4>The definition.</h4>
+            <h4>A definition.</h4>
             <p>
               <small>
-                TDD stands for test-driven development.
+                Just in case &hellip;
+                <br />
+                &hellip; TDD stands for test-driven development.
               </small>
             </p>
           </section>
 
           <section>
-            <h4>The practice.</h4>
+            <h4>Practice.</h4>
             <p>
               <small>
                 <br />
                 <br />
-                Write the tests <strong>before</strong> the code.
+                Write the tests before the code.
                 <br />
-                Let testing feedback <strong>drive</strong> development.
+                Let testing feedback drive development.
               </small>
             </p>
           </section>
 
           <section>
-            <h4>The mindset.</h4>
+            <h4>Mindset.</h4>
             <p>
               <small>
                 Embrace failure.
