Improve TDD presentation.

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <br />
                 Tight feedback loops.
                 <br />
-                Small, easy steps.
+                Small, safe, easy steps.
               </small>
             </p>
           </section>
@@ -423,7 +423,7 @@
             <small>
               <ul>
                 <li>Good names.</li>
-                <li>Short methods.</li>
+                <li>Short, preferably pure methods.</li>
                 <li>Short classes.</li>
                 <br />
                 <li>Do one thing.</li>
