--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
             <small>
               <ul>
                 <li>Good names.</li>
-                <li>Short, preferably pure methods.</li>
+                <li>Short (pure) methods.</li>
                 <li>Short classes.</li>
                 <br />
                 <li>Do one thing.</li>
