--- a/index.html
+++ b/index.html
@@ -49,17 +49,31 @@
         </section>
 
         <section>
+          <blockquote>
+            <small>
+              &ldquo;Sometimes I hate myself for trying to be so bold,
+              <br />
+              but nothing ever seems to get this story told.&rdquo;
+              <br />
+              <br />
+              &mdash;"Hey Lover" by Blake Mills
+            </small>
+          </blockquote>
+        </section>
+
+        <section>
           <section>
             <h3>What is TDD?</h3>
           </section>
 
           <section>
-            <h4>A definition.</h4>
+            <h4>Definition.</h4>
             <p>
               <small>
-                Just in case &hellip;
+                (I'm sure you already know this.)
                 <br />
-                &hellip; TDD stands for test-driven development.
+                <br />
+                TDD stands for test-driven development.
               </small>
             </p>
           </section>
@@ -85,7 +99,7 @@
                 <br />
                 Tight feedback loops.
                 <br />
-                Small, safe, easy steps.
+                Small, well defined steps.
               </small>
             </p>
           </section>
@@ -285,7 +299,7 @@
           </section>
 
           <section>
-            <h4>Do it all the time, from the start.</h4>
+            <h4>All the time, from the start.</h4>
             <p>
               <small>
                 Test especially when it’s hard.
@@ -341,16 +355,13 @@
                 &mdash;Kent Beck
               </small>
             </blockquote>
-            <p><small>(This is &ldquo;pre-factoring.&rdquo;)</small></p>
           </section>
 
           <section>
             <h4>Build from outside to inside, inputs to outputs.</h4>
             <p>
               <small>
-                The user’s needs should come first.
-                <br />
-                Helps ensure we only build components users value.
+                The user’s needs come first.
                 <br />
                 (“User” could mean “developer.”)
               </small>
@@ -483,9 +494,9 @@
                 <br />
                 Use <strong>test doubles</strong> (mocks, stubs, spies, etc.) to:
                 <br />
-                improve isolation, increase speed, avoid I/O,
+                improve isolation, increase speed (avoid I/O),
                 <br />
-                improve design, and discover collaborator &ldquo;protocols.&rdquo;
+                improve design, and discover collaborators.
               </small>
             </p>
           </section>
