--- a/index.html
+++ b/index.html
@@ -49,19 +49,6 @@
         </section>
 
         <section>
-          <blockquote>
-            <small>
-              &ldquo;Sometimes I hate myself for trying to be so bold,
-              <br />
-              but nothing ever seems to get this story told.&rdquo;
-              <br />
-              <br />
-              &mdash;"Hey Lover" by Blake Mills
-            </small>
-          </blockquote>
-        </section>
-
-        <section>
           <section>
             <h3>What is TDD?</h3>
           </section>
@@ -70,7 +57,7 @@
             <h4>Definition.</h4>
             <p>
               <small>
-                (I'm sure you already know this.)
+                (You probably already know this.)
                 <br />
                 <br />
                 TDD stands for test-driven development.
@@ -114,7 +101,7 @@
             <h4>It's better than not.</h4>
             <p>
               <small>
-                We all test, even if it's just manual testing.
+                We test, even if it's just manual testing.
                 <br />
                 Manual testing is expensive, tedious, and error-prone.
                 <br />
@@ -422,9 +409,6 @@
                 <br />
                 <br />
                 <span class="important">Important, but often skipped!</span>
-                <br />
-                <br />
-                Possibilities include all of software engineering.
               </small>
             </p>
           </section>
