--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
             <h4>Test one small behavior per test.</h4>
             <p>
               <small>
-                One assertion, or a couple of test double expectations.
+                Try using only one assertion per test.
                 <br />
                 Makes failures much easier to troubleshoot.
               </small>
