--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <br />
                 Write the tests before the code.
                 <br />
-                Let testing feedback drive development.
+                Let test feedback drive development.
               </small>
             </p>
           </section>
