--- a/index.html
+++ b/index.html
@@ -348,7 +348,9 @@
             <h4>Build from outside to inside, inputs to outputs.</h4>
             <p>
               <small>
-                The user’s needs come first.
+                Helps prevent speculative code (YAGNI).
+                <br />
+                The user’s needs should come first.
                 <br />
                 (“User” could mean “developer.”)
               </small>
