--- a/index.html
+++ b/index.html
@@ -503,6 +503,9 @@
           <h3>Coda</h3>
           <p>
             <small>
+              Progress, not perfection.
+              <br />
+              <br />
               REPL-driven development.
               <br />
               Property or generative testing.
