--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
           <h3>Coda</h3>
           <p>
             <small>
-              Progress, not perfection.
+              <span class="important">Progress, not perfection.</span>
               <br />
               <br />
               REPL-driven development.
