--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <h4>TDD minimizes the lifespan of defects.</h4>
             <p>
               <small>
-                Defects are usually caught at creation time,
+                Defects are usually caught near creation time,
                 <br />
                 when they're the least painful and expensive to fix.
               </small>
@@ -235,11 +235,11 @@
             <h4>TDD documents the code.</h4>
             <p>
               <small>
-                Examples of code in tests must be correct.
+                Examples of code in passing tests must be correct.
                 <br />
                 Well written tests help us readily understand the code.
                 <br />
-                Due to good test coverage, most code will be documented this way.
+                By doing TDD, most code will be documented this way.
               </small>
             </p>
           </section>
@@ -423,8 +423,8 @@
                 <li>Short (pure) methods.</li>
                 <li>Short classes.</li>
                 <br />
-                <li>Do one thing.</li>
-                <li>Don't repeat yourself.</li>
+                <li>Do one thing. (SRP)</li>
+                <li>Don't repeat yourself. (DRY)</li>
                 <li>Uniform levels of abstraction.</li>
               </ul>
             </small>
@@ -500,21 +500,40 @@
         </section>
 
         <section>
-          <h3>Coda</h3>
-          <p>
-            <small>
-              <span class="important">Progress, not perfection.</span>
-              <br />
-              <br />
-              REPL-driven development.
-              <br />
-              Property or generative testing.
-              <br />
-              Mutation and fuzz testing.
-              <br />
-              Transformation priority premise (Uncle Bob).
-            </small>
-          </p>
+          <section>
+            <h3>Coda</h3>
+          </section>
+
+          <section>
+            <h4>Low stress.</h4>
+            <p>
+              <small>
+                <span class="important">Progress, not perfection.</span>
+                <br />
+                <br />
+                Don't know how to do something?
+                <br />
+                Start with one line of test code.
+                <br />
+                Heck, you can start with just a single comment.
+              </small>
+            </p>
+          </section>
+
+          <section>
+            <h4>Things to investigate.</h4>
+            <p>
+              <small>
+                REPL-driven development.
+                <br />
+                Property or generative testing.
+                <br />
+                Mutation and fuzz testing.
+                <br />
+                Transformation priority premise (Uncle Bob).
+              </small>
+            </p>
+          </section>
         </section>
 
       </div>
