--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
                 <br />
                 Start with one line of test code.
                 <br />
-                Heck, you can start with just a single comment.
+                Heck, start with just a single comment.
               </small>
             </p>
           </section>
