--- a/index.html
+++ b/index.html
@@ -431,6 +431,20 @@
           </section>
 
           <section>
+            <h4>Refactoring: be careful.</h4>
+            <blockquote>
+              <small>
+                &ldquo;Well-designed components are easy to replace. Eventually,
+                <br />
+                they will be replaced by ones that are not so easy to replace.&rdquo;
+                <br />
+                <br />
+                &mdash;Sustrik's law
+              </small>
+            </blockquote>
+          </section>
+
+          <section>
             <h4>Rinse and repeat.</h4>
             <p>
               <small>
