--- a/index.html
+++ b/index.html
@@ -303,6 +303,19 @@
           </section>
 
           <section>
+            <h4>Object-oriented languages.</h4>
+            <p>
+              <small>
+                The following applies to object-oriented languages.
+                <br />
+                (Especially dynamically typed ones.)
+                <br />
+                Some of it may apply to other languages.
+              </small>
+            </p>
+          </section>
+
+          <section>
             <h4>Red, green, refactor.</h4>
             <p>
               <small>
