--- a/index.html
+++ b/index.html
@@ -272,9 +272,11 @@
             <h4>TDD fosters predictable schedules.</h4>
             <p>
               <small>
+                Debugging is very unpredictable.
+                <br />
                 Fewer defects means less debugging.
                 <br />
-                Debugging is a huge unknown.
+                TDD significantly reduces the number of defects.
               </small>
             </p>
           </section>
